--- a/style.css
+++ b/style.css
@@ -148,3 +148,62 @@ a:hover {
 .tablight:active {
     background-color: #646464;
 }
+@media (min-width: 250px) and (max-width: 480px) {
+    p {
+        font-size: 105%;
+        margin: 10px;
+    }
+    h1, h3 {
+        font-size: 120%;
+        margin: 10px;
+    }
+    #cardlist {
+        width: 100%;
+        margin: 0;
+        height: 350px;
+        text-align: center;
+        box-shadow: 0 0 0 0;
+        border-right: 0;
+    }
+    #topleftbox {
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+        border-right: 0;
+        top: 0px;   
+        text-align: center;
+    }
+    #cardtype {
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        border: 0;
+    }
+    img {
+        width: 42%;
+    }
+    #weapontab, #trinkettab, #redtab {
+        width: 32%;  
+        display: inline;    
+        margin: 0px 0px 80px 0px;
+        box-shadow: 0 0 0 0;
+    }
+    #searchtab {
+        position: inherit;  
+        width: 100%;
+        margin: 0;
+        position: fixed;
+        bottom: 0px;
+        border: 0;
+    }
+    #info {
+        width: 100%;
+        margin: 0;
+        min-height: 300px;
+        border-top: 0;
+        border-left: 0;
+        border-right: 0;
+    }
+  
+  
+}
