--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html {
     cursor: url(media/cursor.png), pointer;
 }
-
 body {
     font-family: 'Jura', sans-serif;
     background-image: url(media/bg2.png);
@@ -13,31 +12,33 @@ body {
     width: 55%;
     height: 510px;
     float: right;
-    border: 2px solid black; 
     overflow-y: scroll;
     background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px;
+    box-shadow: 5px 5px 12px 1px rgba(0,0,0,0.54);
+    text-align: center;
 }
 #cardtype {
     margin: 10px 10px 0px 10px;
     width: 55%;
     min-height: 160px;
     float: right;
-    border: 2px solid black; 
+    //border: 2px solid black; 
     background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px;
+    //box-shadow: 0px 0px 9px 0px;
+    box-shadow: 5px 5px 12px 1px rgba(0,0,0,0.54);
 }
 #topleftbox {
     margin: 0px;
     width: 40%;
     min-height: 100px;
     float: left;
-    border: 2px solid black;
+    //border: 2px solid black;
     border-top-width: 0px;
     border-left-width: 0px;
     border-bottom-right-radius: 50px;
     background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px;
+    //box-shadow: 0px 0px 9px 0px;
+    box-shadow: 5px 5px 12px 1px rgba(0,0,0,0.54);
 }
 #weapontab, #trinkettab, #redtab {
     cursor: url(media/cursorpointer.png), pointer;
@@ -48,21 +49,23 @@ body {
     width: 10%;
     height: 50px;
     float: right;
-    border: 2px solid black; 
+    //border: 2px solid black; 
     border-top-width: 0px;
-    box-shadow: 0px 2px 9px 0px #000000;    
+    //box-shadow: 0px 2px 9px 0px #000000;   
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.47);
 }
 #searchtab {
-    box-shadow: 0px 2px 9px 0px;
+    //box-shadow: 0px 2px 9px 0px;
     position: relative;
     margin-right: 10px;
     margin-top: 0px;
     width: 20%;
     height: 50px;
     float: right;
-    border: 2px solid black; 
+    //border: 2px solid black; 
     border-top-width: 0px;
     background-color: #ffffff; 
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.47);
 }
 #searchinput {
     height: 95%;
@@ -85,9 +88,10 @@ input:focus {
     width: 40%;
     min-height: 510px;
     float: left;
-    border: 2px solid black;
+    //border: 2px solid black;
     background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px;
+    //box-shadow: 0px 0px 9px 0px;
+    box-shadow: 5px 5px 12px 1px rgba(0,0,0,0.54);
 }
 .cardimg, .cardimg2, .cardimg3 {
     margin: 10px;
@@ -148,22 +152,22 @@ a:hover {
 .tablight:active {
     background-color: #646464;
 }
-@media (min-width: 250px) and (max-width: 480px) {
+@media (min-width: 250px) and (max-width: 950px) {
     p {
         font-size: 105%;
         margin: 10px;
     }
     h1, h3 {
         font-size: 120%;
-        margin: 10px;
+        margin: 7px;
     }
     #cardlist {
         width: 100%;
         margin: 0;
-        height: 350px;
+        height: 320px;
         text-align: center;
-        box-shadow: 0 0 0 0;
-        border-right: 0;
+        box-shadow: 2px 3px 12px 1px rgba(0,0,0,0.46);
+        border-bottom: 1px solid black;
     }
     #topleftbox {
         width: 100%;
@@ -178,23 +182,39 @@ a:hover {
         margin: 0;
         text-align: center;
         border: 0;
+        min-height: 100px;
     }
     img {
         width: 42%;
     }
     #weapontab, #trinkettab, #redtab {
-        width: 32%;  
-        display: inline;    
-        margin: 0px 0px 80px 0px;
-        box-shadow: 0 0 0 0;
+        border-top: 1px solid black;
+        width: 100%;
+        margin: 0;
+        display: block;    
+        box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.47);
     }
-    #searchtab {
-        position: inherit;  
+    #redtab {
+        margin-bottom: 80px;
+    }
+    #searchtab { 
+        height: 40px;
         width: 100%;
         margin: 0;
         position: fixed;
         bottom: 0px;
         border: 0;
+        box-shadow: 2px -2px 12px 1px rgba(0,0,0,0.54);
+    }
+    #searchinput {
+        height: 80%;
+        width: 90%;
+        font-size: 120%;
+        font-weight: bold;
+        border: 0px;
+        font-family:  'Jura', sans-serif;
+        text-align: left;
+        padding-left: 20px;
     }
     #info {
         width: 100%;
